--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Crypto Trading Game</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <!-- Исправленная версия Chart.js без source maps -->
+    <!-- Исправленная версия Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 </head>
 <body>
